# Horacle

./: .gitignore  README.md  Untitled-1.py  Untitled-2.py  Untitled-3.py  app.py  fetch_geonames.py  horaclebot.py  oraclebot.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  treamlit run horaclebot.py
.github/workflows/: tests.yaml
.streamlit/: config.toml
cache/: kerykeion_geonames_cache.sqlite
ephe/: s126199s.se1
horacle/: app.py
horacle/astrology/: birth_form.py  charts.py  charts_local.py  deepseek.py  horoscope.py
myenv/: pyvenv.cfg
tests/: conftest.py  test_charts.py  test_horoscope.py
