[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horacle"
version = "1.0.0"
description = "Astrology-powered chatbot and charting app using Streamlit."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Your Name"}]

dependencies = [
    "streamlit==1.33.0",
    "requests==2.31.0",
    "pycountry==22.3.5",
    "Pillow==10.2.0",
    "swisseph==2.10.00",
    "kerykeion==1.3.0",
    "pytz==2024.1",
    "matplotlib==3.8.3"
]

[project.optional-dependencies]
dev = ["pytest==8.1.1", "pytest-mock==3.12.0"]
